# claude-code-container

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.deploy.yml  docker-compose.yml  package.json
.github/workflows/: build.yml  ci.yml
crates/backend/: Cargo.toml
crates/backend/src/: db.rs  git.rs  main.rs  state.rs  task_runner.rs
crates/backend/src/routes/: mod.rs  tasks.rs  ws.rs
crates/frontend/: Cargo.toml  Dioxus.toml  index.html
crates/frontend/src/: api.rs  main.rs
crates/frontend/src/components/: app.rs  mod.rs  modal.rs  sidebar.rs  terminal.rs  toolbar.rs
crates/shared/src/: lib.rs
migrations/: 0001_init.sql
src/: server.js
src/public/: index.html
tests/: smoke.mjs
