[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

dioxus = { version = "0.7", features = ["web"] }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["js"] }
chrono = { workspace = true }

# HTTP client for WASM
gloo-net = { version = "0.6", features = ["http"] }
anyhow = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }

# JS interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
] }
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
